k8s/production/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: {name}
  name: {name}
spec:
  revisionHistoryLimit: 2
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "true"
      labels:
        name: {name}
    spec:
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "webapps"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - webapps
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - {name}
              topologyKey: kubernetes.io/hostname
      containers:
      - name: {name}
        image: vizzuality/{name}
        imagePullPolicy: Always
        args:
          - start
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "1Gi"
        args:
          - start
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /api/partners
            port: 3000
          initialDelaySeconds: 120
          timeoutSeconds: 15
          periodSeconds: 30
      restartPolicy: Always
