k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rw
  labels:
    name: {name}
  name: {name}
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    name: {name}
